--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     "@aws-sdk/s3-request-presigner": "^3.245.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16",
-    "@pusher/pusher-websocket-react-native": "^1.1.1",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "axios": "^1.2.2",
     "emoji-picker-react": "^4.4.7",
+    "pusher-js": "^8.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.18.10",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
